# layout-designer-rust

./: .gitignore  .swcrc  README.md  index.html  makefile  package-lock.json  package.json  purescript.js  spack.config.js  style.css  tsconfig.json
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/src/: drag_controler.rs  drag_controller.rs  editor.rs  grid.rs  lib.rs  move_controler.rs  page.rs  utils.rs
rust/src/component/: instance.rs  mod.rs  source.rs
rust/src/drag_controler/: drag_listener.rs  drag_transform.rs  move_controler.rs  resize_controler.rs
rust/src/drag_controller/: drag_listener.rs  grid.rs  mod.rs  move_controller.rs  resize_controller.rs
rust/src/drag_controller/move_controller/: css_transform.rs
rust/src/editor/: component_picker.rs  hierarchy.rs  inspector_tree.rs  mod.rs  parameters_panel.rs  workspace.rs
rust/src/editor/parameters_panel/: layout_settings.rs
rust/src/editor/parameters_panel/layout_settings/: flex.rs  free.rs  grid.rs
rust/src/elements/: component.js  component.rs
rust/src/html_elements/: component.js  component.rs
rust/src/layout/: grid.rs
rust/src/move_controler/: drag_listener.rs
rust/src/page/: layout.rs  mod.rs
rust/src/page/layout/: flex.rs  free.rs  grid.rs  mod.rs
rust/src/page/layout/grid/: background.rs
sample/: index.html
scss/: component.scss  editor.scss  fake-tailwind.scss  layout.scss  style.scss  tab_controler.scss
solid-ui/: package-lock.json  package.json  vite.config.ts
src/: container.ts  context_menu.ts  drag_drop.ts  index.ts  json_preview.ts  page_settings.ts  preview.ts
(+23 files in other folders)
