[package]
name = "web-component-manager"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"

wasm-bindgen = { version = "0.2.78", features = [] }
js-sys="0.3.53"
console_error_panic_hook = "0.1"
console_log = "0.2.0"
generational-arena = "0.2.8"
ndarray = "0.15.3"
gloo-events = "0.1.1"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Window',

    'HtmlElement',
    'SvgsvgElement',
    'HtmlInputElement',
    'HtmlTextAreaElement',
    'Element',
    'DomRect',
    'CssStyleDeclaration',
    'DomTokenList',
    'ShadowRoot',
    'HtmlCollection',
    'NodeList',

    'MouseEvent',
    'KeyboardEvent',
    'AnimationEvent',
    'InputEvent'
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
